<resources>
    <string name="app_name">ODAZUM</string>
    <string name="action_settings">설정</string>

    <string name="title_section1">위시리스트</string>
    <string name="title_section2">개발자 정보</string>
    <string name="title_section3">맞춤검색</string>
    <string name="title_section4">인기순 Best 20</string>
    <string name="title_section5">조회순 Best 20</string>
    <string name="title_section6">패션의류</string>
    <string name="title_section7">잡화</string>
    <string name="title_section8">뷰티</string>
    <string name="title_section9">식품</string>
    <string name="title_section10">팬시/문구</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="header_title">Test title text</string>
    <string name="header_subtitle">Test subtitle text</string>

    <color name="colorPrimary">#ba1f24</color>
    <color name="colorPrimaryDark">#ff991a1e</color>
    <color name="textColorPrimary">#FFFFFF</color>
    <color name="textColorPrimaryblack">#000000</color>
    <color name="windowBackground">#FFFFFF</color>
    <color name="navigationBarColor">#000000</color>
    <color name="colorAccent">#607d8b</color>


    <drawable name="actionbar_bg">@color/colorPrimary</drawable>



    <!-- google io code-->
    <color name="session_photo_scrim">#6000</color>
    <color name="body_text_2_inverse">#8affffff</color>
    <color name="body_text_1_inverse">#deffffff</color>
    <color name="navdrawer_text_color_selected">@color/colorPrimary</color>
    <color name="navdrawer_text_color">@color/body_text_1</color>
    <color name="body_text_1">#de000000</color>
    <color name="navdrawer_icon_tint_selected">@color/colorPrimary</color>
    <color name="navdrawer_icon_tint">#888</color>
    <string name="placeholder_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec eleifend arcu, eu convallis nisi. Etiam bibendum, tellus nec ultricies suscipit, metus justo fringilla urna, non mollis tortor libero non enim. Mauris sit amet venenatis risus, at ullamcorper ligula. Maecenas adipiscing non odio ut hendrerit. Phasellus pharetra id sapien laoreet sagittis. Etiam mattis bibendum elit. Vestibulum rutrum a libero eget facilisis. Duis tempor quam velit, at viverra tellus faucibus ut. Mauris venenatis odio sed lorem dignissim, vitae tristique arcu sagittis.</string>
    <!-- Shown on the Session page, alerting user that no details could be found for that session. -->
    <string name="empty_session_detail">No session details found.</string>
    <color name="body_text_disabled">#44000000</color>
    <!-- Section title for videos related to a particular event session -->
    <string name="related_videos">Related Videos</string>
    <!-- Label for a session section listing the requirements for the session -->
    <string name="session_requirements">Requirements</string>
    <!-- Label for a session section listing the presenters at the session -->
    <string name="session_speakers">User Information</string>
    <color name="body_text_2">#8a000000</color>
    <color name="theme_accent_1">#ffffffff</color>
    <color name="theme_accent_1_light">#ffe3262c</color>
    <!-- Label on a button that, when clicked, adds the currently displayed session to their schedule. -->
    <string name="add_to_schedule">Add to schedule</string>

    !-- Card text asking the user to provide session feedback -->
    <string name="session_give_feedback_message">How was this session? Would you like to send feedback?</string>
    <!-- Button of a card in session or session explorer that dismiss the card.
    One sample of such card is "How was this session? We would love to hear your feedback"  with
    "Give feedback" and "No, thanks" as buttons. [CHAR_LIMIT=20]-->
    <string name="no_thanks">No, thanks</string>
    <!-- Label for a button to answer the question "Would you like to send feedback
   about this session?" which, when clicked, allows the user to send their feedback (ratings
   and comments) about a particular session [CHAR_LIMIT=10]. -->
    <string name="give_feedback">Yes</string>

    <!-- Card text indicating the session is being broadcast right now and is available on live stream -->
    <string name="session_live_now_message">This session is being broadcast live right now! Would you like to watch the live stream?</string>

    <!-- Text for a button which allows the user to watch this particular session on live stream. -->
    <string name="watch_now">Watch Now!</string>

    <color name="theme_accent_2">#e91e63</color>

    <color name="default_session_color">@color/colorPrimary</color>
    <!-- Button text for submitting session feedback -->
    <string name="session_feedback_submitlink">Submit Feedback</string>
    <!-- Link text taking the user to the session's YouTube page -->
    <string name="session_link_youtube">YouTube video</string>
    <!-- Link text taking the user to the session's Google Moderator page -->
    <string name="session_link_moderator">Moderator</string>
    <!-- Link text taking the user to the session's slides page -->
    <string name="session_link_pdf">Slides</string>
    <!-- Link text taking the user to the session's notes page -->
    <string name="session_link_notes">Official notes</string>
    <integer name="links_columns">1</integer>


    <string name="long_text">Note about data ownership on Google Play and Cloud Platform: Your Google Play developer account is gaining access to a dedicated, read-only Google Cloud Storage bucket owned by Google Play. If you’re a Google Cloud Storage customer, the rest of your data is unaffected and not connected to your Google Play developer account. Google Cloud Storage customers can find out more about their data storage on the terms of service page. Note about data ownership on Google Play and Cloud Platform: Your Google Play developer account is gaining access to a dedicated, read-only Google Cloud Storage bucket owned by Google Play. If you’re a Google Cloud Storage customer, the rest of your data is unaffected and not connected to your Google Play developer account. Google Cloud Storage customers can find out more about their data storage on the terms of service page.</string>
    <string name="long_text1">Material design is a comprehensive guide for visual, motion, and interaction design across platforms and devices. Android now includes support for material design apps. To use material design in your Android apps, follow the guidelines defined in the material design specification and use the new components and functionality available in Android 5.0 (API level 21) and above.</string>

    <string name="title_activity_check">CheckActivity</string>
    <string name="input_search_keyword">검색어를 입력하세요</string>
    <string name="man">남자</string>
    <string name="woman">여자</string>
    <string name="inquiry">조회순</string>
    <string name="newest">최신순</string>
    <string name="input_price">최대 가격 직접 입력</string>
    <string name="won">원</string>
    <string name="search_all">검색하기</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_search_detail">SearchDetailActivity</string>
    <string name="title_splaxh">Splash </string>
    <string name="title_fragment_search">SearchFragment</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_fragment_wishlist">WishlistFragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_my_date_picker">MyDatePicker</string>
    <string name="title_activity_camera_crop">CameraCropActivity</string>
    <string name="exit">ODAZUM 종료</string>
    <string name="exit2">날시가 마니 추어오 감기 조시마새오 안녕히 가새오</string>
    <string name="title_activity_dbmanager">DBManager</string>
    <string name="title_activity_dbmanager_handler">DBManagerHandler</string>
    <string name="title_activity_db">DB</string>


    <string-array name="setting">
        <item>이름 변경</item>
        <item>생일 변경</item>
        <item>about ODAZUM</item>
    </string-array>

    <string name="title_activity_dbhelp">DBHelp</string>
    <string name="title_activity_result">ResultActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_data_adapter">DataAdapter</string>
    <string name="title_activity_on_fragment_interaction_listener">onFragmentInteractionListener
    </string>
    <string name="title_activity_grid_view_adapter">GridViewAdapter</string>
    <string name="title_activity_grid_view_item">GridViewItem</string>
    <string name="title_activity_prefs_fragment">PrefsFragment</string>
    <string name="typeyourname">이름을 입력하세요</string>
    <string name="typeyourbirthdaydate">생일을 입력하세요</string>
    <string name="startbutton">시작하기</string>
    <string name="welcomemessage">내 마음 때리는 선물</string>
    <string name="inquiry_page">조회순 페이지입니다.</string>
    <string name="searchbar_hint">검색어를 입력하세요</string>
    <string name="save_wishlist">보관함에 저장되었습니다.</string>
    <string name="delete_wishlist">보관함에서 삭제되었습니다.</string>
    <string name="search_but_click">검색하기</string>

</resources>
