<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ededed"
    android:weightSum="5"
    tools:context="OptionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/but_man"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:background="@drawable/select"
            android:text="@string/man"
            android:textSize="25sp"
            android:textColor="#ffffff"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>

        <Button
            android:id="@+id/but_woman"
            android:layout_width="250dp"
            android:layout_height="80dp"
            android:background="@drawable/right_deselect"
            android:text="@string/woman"
            android:textSize="25sp"
            android:textColor="#787878"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"/>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@drawable/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="550dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="6"
            android:gravity="center">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@drawable/graph"
                    android:background="#00000000"/>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ImageButton
                        android:id="@+id/but_age_one"
                        android:layout_gravity="center_vertical"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/scroll_button"
                        android:background="#00000000"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"/>
                    <ImageButton
                        android:id="@+id/but_age_two"
                        android:layout_marginLeft="100dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/scroll_button"
                        android:background="#00000000"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"/>
                    <ImageButton
                        android:id="@+id/but_age_three"
                        android:layout_marginLeft="310dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/scroll_button"
                        android:background="#00000000"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"/>
                    <ImageButton
                        android:id="@+id/but_age_four"
                        android:layout_marginLeft="205dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/scroll_button"
                        android:background="#00000000"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"/>
                    <ImageButton
                        android:id="@+id/but_age_five"
                        android:layout_marginLeft="415dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/scroll_button"
                        android:background="#00000000"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"/>
                    <ImageButton
                        android:id="@+id/but_age_six"
                        android:layout_marginLeft="515dp"
                        android:layout_gravity="center_vertical"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/scroll_button"
                        android:background="#00000000"
                        android:adjustViewBounds="true"
                        android:scaleType="fitXY"/>
                </RelativeLayout>
            </FrameLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="10"
                    android:textSize="25sp"
                    android:background="#00000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="70dp"
                    android:text="20"
                    android:textSize="25sp"
                    android:background="#00000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp"
                    android:text="30"
                    android:textSize="25sp"
                    android:background="#00000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp"
                    android:text="40"
                    android:textSize="25sp"
                    android:background="#00000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp"
                    android:text="50"
                    android:textSize="25sp"
                    android:background="#00000000"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="75dp"
                    android:text="60"
                    android:textSize="25sp"
                    android:background="#00000000"/>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@drawable/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <Button
                android:id="@+id/but_inquiry"
                android:layout_width="250dp"
                android:layout_height="80dp"
                android:background="@drawable/left_deselect"
                android:text="@string/inquiry"
                android:textSize="25sp"
                android:textColor="#787878"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>
            <Button
                android:id="@+id/but_new"
                android:layout_width="250dp"
                android:layout_height="80dp"
                android:background="@drawable/select"
                android:text="@string/newest"
                android:textSize="25sp"
                android:textColor="#ffffff"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center">
            <LinearLayout
                android:layout_width="500dp"
                android:layout_height="80dp"
                android:background="@drawable/gray_box"
                android:layout_gravity="center"
                android:gravity="center"
                android:weightSum="8"
                android:orientation="horizontal">
                <EditText
                    android:gravity="center"
                    android:id="@+id/text_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="7"
                    android:autoText="false"
                    android:hint="@string/input_price"
                    android:textSize="25sp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="2dp"
                    android:textSize="25sp"
                    android:text="@string/won"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@drawable/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/tag_one"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:background="@drawable/recommend"
                    android:textColor="#787878"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/tag_two"
                    android:layout_marginLeft="10dp"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:background="@drawable/recommend"
                    android:textColor="#787878"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/tag_three"
                    android:layout_marginLeft="10dp"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:background="@drawable/recommend"
                    android:textColor="#787878"
                    android:textSize="20sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/tag_four"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:background="@drawable/recommend"
                    android:textColor="#787878"
                    android:textSize="20sp"/>
                <Button
                    android:id="@+id/tag_five"
                    android:layout_marginLeft="10dp"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:background="@drawable/recommend"
                    android:textColor="#787878"
                    android:textSize="20sp"/>

                <Button
                    android:id="@+id/tag_six"
                    android:layout_marginLeft="10dp"
                    android:layout_width="160dp"
                    android:layout_height="70dp"
                    android:background="@drawable/recommend"
                    android:textColor="#787878"
                    android:textSize="20sp"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:src="@drawable/line"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#e1e1e1"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:id="@+id/but_result"
            android:layout_width="350dp"
            android:layout_height="90dp"
            android:background="@drawable/result"
            android:text="검색하기"
            android:textSize="20sp"
            android:textColor="#ffffff"
            />
    </LinearLayout>
</LinearLayout>







